# cat-in-box

./: .gitignore  CLAUDE.md  Cat_in_a_Box.py  Console.py  GDD.md  README.md  catInABox.py  configuration.py  dialogue.py  game_objects.py  package-lock.json  package.json  requirements.txt  run-local.sh  simulation.py  tester.py  utilities.py
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/models/: __init__.py  actuators.py  box.py  cat.py  feeder.py  instruments.py  mass_scale.py  sensors.py
backend/app/schemas/: __init__.py  command.py
backend/app/services/: CommandProcessor.py  __init__.py  command_processor.py  game_service.py  simulation_service.py
cat-in-box-unity/Assets/Audio/: AudioMixer.mixer
cat-in-box-unity/Assets/Dialog/: Dialog.cs  dialog.json
cat-in-box-unity/Assets/Prefabs/: Dispenser.prefab  Extractor.prefab  SubmittedCommand.prefab
cat-in-box-unity/Assets/Scenes/: SampleScene.unity
cat-in-box-unity/Assets/Scripts/: Box.cs  Cat.cs  Command.cs  Device.cs  GameManager.cs  HistoryItemUI.cs  SimTime.cs  Simulation.cs  Simulator.cs  Terminal.cs  Thing.cs
cat-in-box-unity/Assets/Scripts/Device/: Device.cs  Dispenser.cs  Extractor.cs
cat-in-box-unity/Assets/Scripts/Sensor/: Scale.cs  Sensor.cs
cat-in-box-unity/ProjectSettings/: ProjectSettings.asset  TagManager.asset
frontend/: package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.jsx  App.test.tsx  App.tsx  main.tsx
frontend/src/components/: MassChart.tsx
resources/tools/: resize_image.py
(+12 files in other folders)
