[project]
name = "cat in box"
required-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.23.0",
    "ruff>=0.15.0",
    "black>=22.3.0",
    "mypy>=0.910",
]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88
